# python-systemair-saveconnect

./: .gitignore  LICENSE.txt  README.md  publish.sh  pyproject.toml  requirements.txt  setup.py
scripts/: acronyms.txt
systemair/: VERSION.py
systemair/savecair/: __init__.py  client.py  cmd.py  command.py  const.py  parameter_processing.py  parameters.py  parameters.txt  systemair.py  tests.py
systemair/saveconnect/: __init__.py  auth.py  const.py  data.py  graphql.py  models.py  register.py  registry.py  systemair.py  websocket.py
